plugins {
    id 'java-library'
    id 'maven-publish'
    id("com.gradleup.shadow") version "9.0.0-beta12"
}

group = 'me.flame.universal'
version = '6.0.1'

repositories {
    mavenCentral()
    maven {
        name = "jitpack"
        url = "https://jitpack.io"
    }
}

dependencies {
    // HikariCP
    //implementation 'com.zaxxer:HikariCP:6.2.1'

    compileOnly project(':core')

    compileOnly 'org.jetbrains:annotations:24.0.1'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'maven-publish'
    apply plugin: 'signing'
    apply plugin: 'com.github.johnrengelman.shadow'

    java {
        withSourcesJar()
    }

    publishing {
        publications {
            mavenJava(MavenPublication) {
                from components.java
            }
        }
        repositories {
            maven {
                url 'https://jitpack.io'
            }
        }
    }

    java.toolchain.languageVersion.set(JavaLanguageVersion.of(21))
}